--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,78 +1,42 @@
-version: 2.1
-
-executors:
-  plaid-android-executor:
-    docker:
-      - image: circleci/android:api-29
-    working_directory: ~/plaid
-    environment:
-      JAVA_TOOL_OPTIONS: "-Xmx2048m"
-      GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2"
-      TERM: dumb
-
-  plaid-gcloud-executor:
-    docker:
-      - image: google/cloud-sdk:latest
-    working_directory: ~/plaid
-    environment:
-      TERM: dumb
-
-commands:
-  store-plaid-artifacts:
-    description: "It stores Lint & Test artifacts"
-    parameters:
-      artifact-path:
-        type: string
-    steps:
-      - store_artifacts:
-          path: <<parameters.artifact-path>>
-
+# Java Gradle CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-java/ for more details
+#
+version: 2
 jobs:
   build:
-    executor: plaid-android-executor
+    docker:
+      # specify the version you desire here
+      - image: circleci/openjdk:8-jdk
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+
+    working_directory: ~/repo
+
+    environment:
+      # Customize the JVM maximum heap limit
+      JVM_OPTS: -Xmx3200m
+      TERM: dumb
+
     steps:
       - checkout
-      - run:
-          name: Download Dependencies
-          command: ./gradlew dependencies
-      - run:
-          name: Run JVM Tests & Lint, assemble app and test APKs for debug and release
-          command: ./gradlew check assemble assembleAndroidTest --stacktrace
-      - run:
-          name: Gather Lint results
-          command: scripts/copy_lint_results.sh
-      - store-plaid-artifacts:
-          artifact-path: ci_results/lint
-      # Persist build directory for all modules
-      - persist_to_workspace:
-          root: .
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "build.gradle" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run: gradle dependencies
+
+      - save_cache:
           paths:
-            - build
-            - ./**/build
+            - ~/.gradle
+          key: v1-dependencies-{{ checksum "build.gradle" }}
 
-  test_instrumented:
-    executor: plaid-gcloud-executor
-    steps:
-      - checkout
-      - attach_workspace:
-          at: ~/plaid
-      - run:
-          name: Setup Google Cloud auth
-          command: scripts/ftl_setup.sh
-      - run:
-          name: Run tests on Firebase Test Lab and download results
-          command: scripts/ftl_run_tests.sh $CIRCLE_BUILD_NUM firebase_test_results
-          when: always
-      - store-plaid-artifacts:
-          artifact-path: firebase_test_results
-      - store_test_results:
-          path: firebase_test_results
-
-workflows:
-  version: 2
-  build_and_test:
-    jobs:
-      - build
-      - test_instrumented:
-          requires:
-            - build
+      # run tests!
+      - run: gradle test
